# haskell-sudoku

./: .gitignore  LICENSE  README.md  TODO.md  build-doc.sh  cabal.project  run.sh  sudoku.cabal
assets/css/: linuwial.css
docs/: Sudoku-Generate.html  Sudoku-Server-Get.html  Sudoku-Server-Post.html  Sudoku-Server-Server.html  Sudoku-Server-Util.html  Sudoku-Server.html  Sudoku-Solve-Backtracking.html  Sudoku-Solve-Basic.html  Sudoku-Solve.html  Sudoku-Types.html  Sudoku-Util.html  Sudoku-Validity.html  Sudoku.html  doc-index.html  doc-index.json  index.html  sudoku.haddock
docs/src/: Sudoku.Generate.html  Sudoku.Server.Get.html  Sudoku.Server.Post.html  Sudoku.Server.Util.html  Sudoku.Server.html  Sudoku.Solve.Backtracking.html  Sudoku.Solve.Basic.html  Sudoku.Solve.html  Sudoku.Types.html  Sudoku.Util.html  Sudoku.Validity.html  Sudoku.html
scripts/: lint.sh
src/: Main.hs  Sudoku.hs
src/Sudoku/: Defs.hs  Generate.hs  Server.hs  Solve.hs  Types.hs  Util.hs  Validity.hs
src/Sudoku/Server/: Get.hs  Post.hs  Server.hs  Util.hs
src/Sudoku/Solve/: Backtracking.hs  Basic.hs
testsuite/: Test.hs
testsuite/Sudoku/Tests/: Defs.hs  Generate.hs  TestUtils.hs  Types.hs  Util.hs
testsuite/Sudoku/Tests/Solve/: Backtracking.hs  Basic.hs
testsuite/data/: gen_data.py  split_csv.py
testsuite/data/valid_puzzles_and_solutions/: 1.puzzle  1.solution  10.puzzle  10.solution  11.puzzle  11.solution  12.puzzle  12.solution  13.puzzle  13.solution  14.puzzle  14.solution  15.puzzle  15.solution  16.puzzle  16.solution  17.puzzle  17.solution  18.puzzle  18.solution  19.puzzle  19.solution  2.puzzle  2.solution  20.puzzle  20.solution  21.puzzle  21.solution  22.puzzle  22.solution  23.puzzle  23.solution  24.puzzle  24.solution  25.puzzle  25.solution  26.puzzle  26.solution  27.puzzle  27.solution  (+158 more)
testsuite/test-server-js/: index.js  package-lock.json  package.json
