cabal-version:       2.2
name:                sudoku
version:             0.1.0.0
synopsis:            Sudoku solver implemented in Haskell
description:
    Sudoku is a library for generating, checking and solving Sudoku puzzles.
homepage:            https://github.com/fpringle/haskell-sudoku
license:             BSD-3-Clause
license-file:        LICENSE
author:              Frederick Pringle
maintainer:          freddyjepringle@gmail.com
-- copyright:
category:            Game
build-type:          Simple

common deps
  build-depends:       base >=4.12
                       , aeson
                       , bytestring
                       , text
                       , random
                       , http-types
                       , strict
                       , wai

library
  import:              deps
  exposed-modules:     Sudoku
                       , Sudoku.Solve
                       , Sudoku.Server
                       , Sudoku.Types
                       , Sudoku.Generate
                       , Sudoku.Util
                       , Sudoku.Validity
                       , Sudoku.Solve.Backtracking
                       , Sudoku.Solve.Basic
                       , Sudoku.Server.Get
                       , Sudoku.Server.Post
                       , Sudoku.Server.Util
  other-modules:    
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sudoku
  import:              deps
  main-is:             Main.hs
  other-modules:       Sudoku.Types
                       , Sudoku.Generate
                       , Sudoku.Server
                       , Sudoku.Server.Get
                       , Sudoku.Server.Post
                       , Sudoku.Server.Util
                       , Sudoku.Solve.Backtracking
                       , Sudoku.Solve.Basic
                       , Sudoku.Util
                       , Sudoku.Validity
  -- other-extensions:
  build-depends:       warp
                       , sudoku
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite sudoku-testsuite
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  other-modules:       Sudoku.Tests.TestUtils
                       , Sudoku.Tests.Types
                       , Sudoku.Tests.Generate
                       , Sudoku.Tests.Util
                       , Sudoku.Tests.Solve.Backtracking
                       , Sudoku.Tests.Solve.Basic
                       , Sudoku.Types
                       , Sudoku.Generate
                       , Sudoku.Solve.Backtracking
                       , Sudoku.Solve.Basic
                       , Sudoku.Util
                       , Sudoku.Validity
  build-depends:       base >=4.12
                       , QuickCheck
                       , checkers
                       , random
                       , strict
                       , sudoku
  hs-source-dirs:      src testsuite
  default-language:    Haskell2010
